--- a/training/ModulesAndEvents.qmd
+++ b/training/ModulesAndEvents.qmd
@@ -124,7 +124,7 @@ For more information
 
 ## See also
 
-See also: `?scheduleEvent`, `?P`, `?time`, `?start`, `?end`
+See also: @sec-schedulingEvents, [`?scheduleEvent`](https://rdrr.io/cran/SpaDES.core/man/scheduleEvent.html),  [`?P`](https://rdrr.io/cran/SpaDES.core/man/params.html), [`?time`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html), [`?start`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html), [`?end`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html)
 
 ## More learning on this subject
 
