--- a/training/Scheduling.qmd
+++ b/training/Scheduling.qmd
@@ -37,7 +37,7 @@ Require::Require(c("ggplot2", "SpaDES.core"))
 
 ```
 
-## Scheduling events in SpaDES
+## Scheduling events in SpaDES {#sec-schedulingEvents}
 
 See [New Module Introducion](NewModuleIntro.qmd) for creation of a simple module.
 
@@ -132,7 +132,8 @@ There is a special function in a `SpaDES` module called `doEvent`. SpaDES calls 
 
 We look at the `init` event and we see 2 `scheduleEvent` calls that come with the template. We will use those to learn. In each "event", we often see one part that "does something" and another part that "schedules something". In the default template, we "do" the `Init` function and we schedule `plot` and `save`. We can delete the `save` event, as we won't do that here. But we will replace it with "schedule prediction"
 
-See `?start`, `?scheduleEvent`, `?P`
+See [`?start`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html), [`?scheduleEvent`]()https://rdrr.io/cran/SpaDES.core/man/scheduleEvent.html, [`?P`](https://rdrr.io/cran/SpaDES.core/man/params.html)
+
 ```{r defaultInit,eval=FALSE}
 sim <- Init(sim)
 
@@ -164,7 +165,8 @@ switch(
 
 We add code to make a new event, called `"predictions"` (it must match what we wrote in the `scheduleEvent`). In this event, we "do" the prediction, then we schedule the next prediction at "time plus 1"
 
-See `?time`
+See [`?time`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html).
+
 ```{r predictionEvent,eval=FALSE} 
 predictions = {
   # do the Prediction
@@ -215,7 +217,7 @@ A complete version of this new module can be found at [scheduling.R](../../tutos
 
 ## See also
 
-See also: `?scheduleEvent`, `?P`, `?time`, `?start`, `?end`
+See also: [`?scheduleEvent`](https://rdrr.io/cran/SpaDES.core/man/scheduleEvent.html), [`?P`](https://rdrr.io/cran/SpaDES.core/man/params.html), [`?time`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html), [`?start`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html), [`?end`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html)
 
 ## More learning on this subject
 
