--- a/training/ModulesAndEvents.qmd
+++ b/training/ModulesAndEvents.qmd
@@ -41,13 +41,15 @@ Require::Require(c("reproducible"))
 
 A module is a collection of R scripts that includes:
 
-- `defineModule`  (mandatory)
-- `doEvent.*moduleName*` function (mandatory)
-- other functions (optional)
-- a documentation file (*moduleName*.rmd)
+-   `defineModule` (mandatory)
+-   `doEvent.*moduleName*` function (mandatory)
+-   other functions (optional)
+-   a documentation file (*moduleName*.rmd)
 
-These are all contained within a file structure like this, with other optional files:
-```
+These are all contained within a file structure like this, with other
+optional files:
+
+```         
 /moduleRepository
   |_ moduleName/
       |_ R/                     # contains additional .R (helper) files
@@ -62,24 +64,38 @@ These are all contained within a file structure like this, with other optional f
 
 ### Events
 
-Events are named chunks of code that can be scheduled to be run once or many times. These are scheduled with `scheduleEvent`. There are several commonly occurring module types that can be grouped based on the events that they contain.
+Events are named chunks of code that can be scheduled to be run once or
+many times. These are scheduled with `scheduleEvent`. There are several
+commonly occurring module types that can be grouped based on the events
+that they contain.
 
 ### Functions
 
-Essentially, everything in R is or uses functions. Modules define functions (`doEvent.*moduleName*`), events call specific functions, and functions can be defined within modules, R packages, or user code.
+Essentially, everything in R is or uses functions. Modules define
+functions (`doEvent.*moduleName*`), events call specific functions, and
+functions can be defined within modules, R packages, or user code.
 
 #### Key functions in the SpaDES ecosystem
 
-In re-useable workflows, functions become particularly effective if they:
+In re-useable workflows, functions become particularly effective if
+they:
 
-1. Are rerun-tolerant, meaning the first time they run they "do" something, but the second and subsequent times, they give the same output as the first time, but they skip the "doing" part
-2. Can be run from any person's computer and "work", i.e., give the same result
+1.  Are rerun-tolerant, meaning the first time they run they "do"
+    something, but the second and subsequent times, they give the same
+    output as the first time, but they skip the "doing" part
+2.  Can be run from any person's computer and "work", i.e., give the
+    same result
 
 Two key functions help achieve these points, `Cache` and `prepInputs`
 
 #### `Cache`
 
-`Cache` is a function that can be wrapped around other functions that turns that function into a rerun-tolerant function. `reproducible::Cache` has several important modifications that work for *some* objects that don't cache well using "normal" caching, such as `terra` objects that are actually pointers to locations on disk rather than normal R objects.
+`Cache` is a function that can be wrapped around other functions that
+turns that function into a rerun-tolerant function.
+`reproducible::Cache` has several important modifications that work for
+*some* objects that don't cache well using "normal" caching, such as
+`terra` objects that are actually pointers to locations on disk rather
+than normal R objects.
 
 ```{r Cache,eval=FALSE}
 library(reproducible)
@@ -88,39 +104,36 @@ a <- rnorm(1e7)
 b <- rnorm(1e7) |> Cache()
 
 ```
-See [`?reproducible::Cache`](https://reproducible.predictiveecology.org/reference/Cache.html)
+
+See
+[`?reproducible::Cache`](https://reproducible.predictiveecology.org/reference/Cache.html)
 
 #### `prepInputs`
 
 [`?reproducible::prepInputs`](https://reproducible.predictiveecology.org/reference/prepInputs.html)
 
-
-
 For more information
-
-
 
 #### Module types, based on Events and Functions used
 
-- Data preparation modules may have:
+-   Data preparation modules may have:
 
-    - one (maybe just the "init" event) or few events and their primary goal is to get and deal with data
-    - Do GIS operations
-    - Use `reproducible::prepInputs`
-    
-- Dynamic modules
+    -   one (maybe just the "init" event) or few events and their
+        primary goal is to get and deal with data
+    -   Do GIS operations
+    -   Use `reproducible::prepInputs`
 
-    - modules that repeat certain events
-    - modules that use explicit iterations or time and whose inputs can vary each time
+-   Dynamic modules
 
-- Data Visualization modules
+    -   modules that repeat certain events
+    -   modules that use explicit iterations or time and whose inputs
+        can vary each time
 
-    - 
+-   Data Visualization modules
 
-
+    -   
 
 ## Questions
-
 
 ## See also
 
@@ -131,4 +144,3 @@ See also: @sec-schedulingEvents, [`?scheduleEvent`](https://rdrr.io/cran/SpaDES.
 [My First Module](https://spades-workshops.predictiveecology.org/articlesMay2018/MyFirstModule.html)
 
 [Creating a seed dispersal module](https://spades-workshops.predictiveecology.org/articles/02c-Convert_R_code_to_SpaDES_module.html)
-
