--- a/training/realexamples.qmd
+++ b/training/realexamples.qmd
@@ -1,8 +1,10 @@
 # "Real-world" examples of SpaDES workflows
 
-This section will take you through several "real-world" examples that use SpaDES
-to build and execute a workflow. By "real-world" we mean workflows that use 
-models that have been/are used in research or application.
+This section will take you through several "real-world" examples that
+use SpaDES to build and execute a workflow. By "real-world" we mean
+workflows that use models that have been/are used in research or
+application.
 
-Because we will not explain each model or the SpaDES modules in detail, we encourage
-learning more about these models from the sources noted in the chapters.
+Because we will not explain each model or the SpaDES modules in detail,
+we encourage learning more about these models from the sources noted in
+the chapters.
