[skip-ci] simList.qmd: no need to pass eval = FALSE

--- a/training/simList.qmd
+++ b/training/simList.qmd
@@ -30,7 +30,7 @@ In `SpaDES`, this place is called the `simList`. It is a rich data
 object that acts like a list or an environment, i.e., we can put objects
 into it and use them later.
 
-```{r simListCreate, eval = FALSE}
+```{r simListCreate}
 sim <- simInit()
 sim$a <- 1
 sim$b <- sim$a + 2
@@ -111,11 +111,11 @@ calls.
 
 ### Initiliaze an empty `simList` object
 
-```{r empty-simList, eval = FALSE}
+```{r empty-simList}
 emptySim <- simInit()
 ```
 
-```{r empty-simList2, echo = FALSE}
+```{r empty-simList2, eval = TRUE, echo = FALSE}
 emptySim <- SpaDES.core::simInit()
 ```
 
