--- a/training/ModulesAndEvents.qmd
+++ b/training/ModulesAndEvents.qmd
@@ -39,20 +39,27 @@ Require::Require(c("reproducible"))
 
 ## Modules vs. Events vs. Functions
 
-A **module** is a collection of R scripts structured in a particular way. A module is very similar in structure to an R package, so will look familiar if you know what that looks like. **Events** are ways to name chunks of code that can be run in a particular sequence or at a particular time. **Functions** are the basic building blocks in R and other languages. We work with all three of these to make robust and re-useable workflows.
+A **module** is a collection of R scripts structured in a particular
+way. A module is very similar in structure to an R package, so will look
+familiar if you know what that looks like. **Events** are ways to name
+chunks of code that can be run in a particular sequence or at a
+particular time. **Functions** are the basic building blocks in R and
+other languages. We work with all three of these to make robust and
+re-useable workflows.
 
 ### Modules
 
 Modules include:
 
-- `defineModule`  (mandatory)
-- `doEvent.*moduleName*` function (mandatory)
-- other functions (optional)
-- a documentation file (*moduleName*.rmd)
+-   `defineModule` (mandatory)
+-   `doEvent.*moduleName*` function (mandatory)
+-   other functions (optional)
+-   a documentation file (*moduleName*.rmd)
 
-These are all contained within a file structure like this, with other optional files:
+These are all contained within a file structure like this, with other
+optional files:
 
-```
+```         
 /moduleRepository
   |_ moduleName/
       |_ R/                     # contains additional .R (helper) files
@@ -117,31 +124,35 @@ See
 
 #### `prepInputs`
 
-`prepInputs` is a workhorse function that helps users point to cloud or local datasets: 
-[`?reproducible::prepInputs`](https://reproducible.predictiveecology.org/reference/prepInputs.html). It has internal 
+`prepInputs` is a workhorse function that helps users point to cloud or
+local datasets:
+[`?reproducible::prepInputs`](https://reproducible.predictiveecology.org/reference/prepInputs.html).
+It has internal
 
 For more information
 
-
-
 ### Module types
 
-Even though all modules are built with the same structures (events & functions), for convenience, we can categorize different types of modules.
+Even though all modules are built with the same structures (events &
+functions), for convenience, we can categorize different types of
+modules.
 
 For example, modules can be:
 
 **Static**:
 
-    - Data preparation
-    - one (maybe just the "init" event) or few events and their primary goal is to get and deal with data
-    - Do GIS operations
-    - Use `reproducible::prepInputs`
-    
-- **Dynamic**
+```         
+- Data preparation
+- one (maybe just the "init" event) or few events and their primary goal is to get and deal with data
+- Do GIS operations
+- Use `reproducible::prepInputs`
+```
+
+-   **Dynamic**
 
 -   Dynamic modules
 
-- 
+-   
 
 -   Data Visualization modules
 
@@ -151,10 +162,17 @@ For example, modules can be:
 
 ## See also
 
-See also: @sec-schedulingEvents, [`?scheduleEvent`](https://rdrr.io/cran/SpaDES.core/man/scheduleEvent.html),  [`?P`](https://rdrr.io/cran/SpaDES.core/man/params.html), [`?time`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html), [`?start`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html), [`?end`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html)
+See also: @sec-schedulingEvents,
+[`?scheduleEvent`](https://rdrr.io/cran/SpaDES.core/man/scheduleEvent.html),
+[`?P`](https://rdrr.io/cran/SpaDES.core/man/params.html),
+[`?time`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html),
+[`?start`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html),
+[`?end`](https://rdrr.io/cran/SpaDES.core/man/simList-accessors-times.html)
 
 ## More learning on this subject
 
-[My First Module](https://spades-workshops.predictiveecology.org/articlesMay2018/MyFirstModule.html)
+[My First
+Module](https://spades-workshops.predictiveecology.org/articlesMay2018/MyFirstModule.html)
 
-[Creating a seed dispersal module](https://spades-workshops.predictiveecology.org/articles/02c-Convert_R_code_to_SpaDES_module.html)
+[Creating a seed dispersal
+module](https://spades-workshops.predictiveecology.org/articles/02c-Convert_R_code_to_SpaDES_module.html)
